--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,37 @@
-rabbit1:
-  image: levvel/rabbitclusternode
-  hostname: rabbit1
-  ports:
-    - "5672:5672"
-    - "15672:15672"
-
-rabbit2:
-  image: levvel/rabbitclusternode
-  hostname: rabbit2
-  links:
-    - rabbit1
-  environment:
-   - CLUSTERED=true
-   - CLUSTER_WITH=rabbit1
-   - RAM_NODE=true
-  ports:
+version: "2"
+services:
+  rabbit1:
+    image: learningstaircase/rabbitmq-cluster
+    hostname: rabbit1
+    environment:
+      - RABBITMQ_DEFAULT_USER=user
+      - RABBITMQ_DEFAULT_PASS=pass
+      - ERLANG_COOKIE=abcdefg
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+  rabbit2:
+    image: learningstaircase/rabbitmq-cluster
+    hostname: rabbit2
+    links:
+      - rabbit1
+    environment:
+      - ERLANG_COOKIE=abcdefg
+      - CLUSTER_WITH=rabbit1
+      - ENABLE_RAM=true
+      - RAM_NODE=true
+    ports:
       - "5673:5672"
       - "15673:15672"
-
-rabbit3:
-  image: levvel/rabbitclusternode
-  hostname: rabbit3
-  links:
-    - rabbit1
-    - rabbit2
-  environment:
-   - CLUSTERED=true
-   - CLUSTER_WITH=rabbit1
-  ports:
+  rabbit3:
+    image: learningstaircase/rabbitmq-cluster
+    hostname: rabbit3
+    links:
+      - rabbit1
+      - rabbit2
+    environment:
+      - ERLANG_COOKIE=abcdefg
+      - CLUSTER_WITH=rabbit1
+    ports:
       - "5674:5672"
       - "15674:15672"
